# static-program-analyzer

./: .clang-format  .codecov.yml  .gitignore  .pre-commit-config.yaml  README.md
Team09/Code09/src/unit_testing/: CMakeLists.txt
Team09/Code09/src/unit_testing/src/: PQLEvaluator.cpp  TestAST.cpp
Team09/Code09/src/unit_testing/src/PKB/Stores/: TestAssignPatternStore.cpp  TestCallStore.cpp  TestEntityStore.cpp  TestFollowsStore.cpp  TestIfPatternStore.cpp  TestModifiesStore.cpp  TestNextStore.cpp  TestParentStore.cpp  TestPatternStore.cpp  TestStatementStore.cpp  TestUsesStore.cpp  TestVariablesStore.cpp  TestWhilePatternStore.cpp
Team09/Code09/src/unit_testing/src/qps/: GrammarUtilsTest.cpp  PQLParserTest.cpp  PQLParserTester.cpp  PQLParserTester.h  ParserUtilsTest.cpp  SyntaxValidatorTest.cpp  TestClauseArgument_AI.cpp  TestGrammarUtils.cpp  TestPQLParser.cpp  TestParserUtils.cpp  TestQueryEntity_AI.cpp  TestQuery_AI.cpp  TestTable_AI.cpp  TestValidator.cpp  TokenizerTest.cpp  ValidatorTest.cpp
Team09/Code09/src/unit_testing/src/qps/clauses/: TestAffectsClause.cpp  TestClauseEvaluatorUtils.cpp  TestFollowsClause.cpp  TestFollowsStarClause.cpp  TestModifiesClause.cpp  TestNextClause.cpp  TestNextStarClause.cpp  TestParentClause.cpp  TestUsesClause.cpp  (+5 more)
Team09/Code09/src/unit_testing/src/sp/: TestAST.cpp  TestASTUtils.cpp  TestCFG.cpp  TestDesignExtractor.cpp  TestLexicalAnalyzer.cpp  TestMatchable.cpp  TestPatternTreeNode.cpp  TestSemanticValidator.cpp  TestSourceLoader.cpp  TestSourceLoaderUtil.cpp  TestSyntaxValidator.cpp  TestTokenizer.cpp  utils.cpp  utils.h
(+423 files in other folders)
