file(GLOB_RECURSE srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_executable(unit_testing ${srcs})
target_compile_definitions(unit_testing PRIVATE CATCH_CONFIG_ENABLE_BENCHMARKING)
target_link_libraries(unit_testing spa)
